# mindbody-dahua-integration

./: .coverage  .coveragerc  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  coverage.xml  deploy-local.ps1  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/hooks/: ruff_check.py
.github/workflows/: docker-publish.yml  unit-tests.yml
.serena/: project.yml
app/: config.py  main.py
app/admin/: auth.py  csrf.py  dashboard.py  devices.py  export_jobs.py  members.py  mindbody_users.py  router.py  sync_queue.py  sync_views.py
app/api/: deps.py  health.py  router.py  webhooks.py
app/clients/: dahua.py  mindbody.py
app/models/: __init__.py  admin_user.py  dahua_sync_queue.py  database.py  device.py  export_job.py  member.py  member_device_enrollment.py  mindbody_client.py  mindbody_membership.py  sync_log.py
app/schemas/: device.py  enrollment.py  member.py
app/services/: __init__.py  admin_users.py  dashboard.py  devices.py  export_jobs.py  members.py  memberships.py  queue.py  queue_archive.py
app/sync/: blocks.py  engine.py  mindbody_client_service.py  scheduler.py  tasks.py  worker.py
app/sync/flows/: dahua_push.py  health.py  incremental.py  integration.py  member.py  mindbody_memberships.py  mindbody_users.py
app/templates/: base.html  dashboard.html  login.html
app/utils/: hmac_verify.py  photo.py  retry.py
docker/: init-db.sql
docs/: api spec.md  mindbody-spec.json
scripts/: get_mindbody_users.py
tests/: conftest.py
tests/helpers/: factories.py  fakes.py
tests/services/: test_admin_auth_route.py  test_admin_dashboard_route.py  test_admin_devices_route.py  test_admin_mb_users_route.py  test_admin_queue_export_routes.py  test_admin_users.py  test_dashboard.py  test_deps.py  test_devices.py  test_export_jobs.py  test_export_jobs_update_fields.py  test_health_flow.py  test_main_lifespan.py  test_members.py  test_memberships.py  test_queue.py  test_queue_archive.py  test_tasks_thin_wrappers.py
(+62 files in other folders)
